# epubcrush

./: compare.py  epubcrush.py  epubpacker.py  license.md  makefile  pyproject.toml  readme.md  setup.py
.github/workflows/: build.yml  pypi.yml  release.yml  test.yml
epubcrush/: __init__.py  __main__.py  epubcrush.py  filter.lua
